--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@ usadasen mecánica</a></p>
 <p><a href="03_mot2t_unidades_1.html">3. Motores de 2 tiempos -parte 1
 (Alternancia 1)</a></p>
 <p><a href="04_mot2t_2.html">4. Motores de 2 tiempos - parte 2</a></p>
+<p><a href="05_mot4t_1.html">5. Motores de 4 tiempos - parte 1
+(Alternancia 2)</a></p>
 <p><span hidden>Fin archivo</span></p>
 </div>
 <!-- HTML style definitions -->
