--- a/index.html
+++ b/index.html
@@ -34,14 +34,19 @@ vertical-align: middle;
 </div>
 <p><br></p>
 <h2 id="guías-de-aprendizaje">Guías de aprendizaje</h2>
-<p><a href="01_motores.html">1. Tipos de motores</a></p>
-<p><a href="02_magnitudes_unidades.html">2. Magnitudes y unidades
-usadasen mecánica</a></p>
-<p><a href="03_mot2t_unidades_1.html">3. Motores de 2 tiempos -parte 1
-(Alternancia 1)</a></p>
-<p><a href="04_mot2t_2.html">4. Motores de 2 tiempos - parte 2</a></p>
-<p><a href="05_mot4t_1.html">5. Motores de 4 tiempos - parte 1
-(Alternancia 2)</a></p>
+<ul>
+<li><p><a href="01_motores.html">1. Tipos de motores</a></p></li>
+<li><p><a href="02_magnitudes_unidades.html">2. Magnitudes y unidades
+usadasen mecánica</a></p></li>
+<li><p><a href="03_mot2t_unidades_1.html">3. Motores de 2 tiempos -parte
+1 (Alternancia 1)</a></p></li>
+<li><p><a href="04_mot2t_2.html">4. Motores de 2 tiempos - parte
+2</a></p></li>
+<li><p><a href="05_mot4t_1.html">5. Motores de 4 tiempos - parte 1
+(Alternancia 2)</a></p></li>
+<li><p><a href="06_motor4t_2.html">6. Motores de 4 tiempos -parte 2
+(Alternancia 3)</a></p></li>
+</ul>
 <p><span hidden>Fin archivo</span></p>
 </div>
 <!-- HTML style definitions -->
