--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ usadasen mecánica</a></p></li>
 (Alternancia 3)</a></p></li>
 <li><p><a href="07_mot4t_3.html">7. Motores de 4 tiempos - parte
 3</a></p></li>
+<li><p><a href="08_mantenimiento_motor_4t.html">8. Mantenimiento de un
+motor 4T - parte 1 (Alternacia 4)</a></p></li>
 </ul>
 <p><span hidden>Fin archivo</span></p>
 <p><br></p>
