--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@ vertical-align: middle;
 <div class="grey3">
 <p><strong>Año:</strong> 2025</p>
 <p><strong>Profesor:</strong> José Juarez</p>
+<div class="size80">
+<p><strong>Criterios de aprobación</strong></p>
+<ul>
+<li><strong>Bimestre 1:</strong> Tener <strong>A</strong> en Guía 3
+(Alt. 1) y Prueba 1</li>
+<li><strong>Bimestre 2:</strong> Tener <strong>A</strong> en Guía 5
+(Alt. 2), Guía 6 (Alt. 3) y Prueba 2.</li>
+<li><strong>Cuatrimestre 1:</strong> Tener <strong>A</strong> en
+Bimestre 1 y 2</li>
+</ul>
+</div>
 </div>
 <p><br></p>
 <h2 id="guías-de-aprendizaje">Guías de aprendizaje</h2>
