--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@ usadasen mecánica</a></p></li>
 3</a></p></li>
 <li><p><a href="08_mantenimiento_motor_4t.html">8. Mantenimiento de un
 motor 4T - parte 1 (Alternacia 4)</a></p></li>
+<li><p><a href="09_transmision.html">9. Transmisión de potencia
+(Alternancia 5)</a></p></li>
 </ul>
 <p><span hidden>Fin archivo</span></p>
 <p><br></p>
