--- a/09_transmision.html
+++ b/09_transmision.html
@@ -231,6 +231,36 @@ reducción 3:1, ¿a cuántas RPM gira el eje de las ruedas?</p></li>
 <li><strong>3)</strong> Contesta brevemente esta pregunta: ¿Por qué no
 se conecta el motor directamente a las ruedas?</li>
 </ul>
+<p><br><br></p>
+<p><strong>(En el aula)</strong></p>
+<h2 id="actividad-5">Actividad 5</h2>
+<p>Suponga que en un tractor:</p>
+<ul>
+<li>El motor gira a 3500 RPM.</li>
+<li>La caja reduce con una relación de 1:3 en primera.</li>
+</ul>
+<p>¿A que velocidad en rpm gira la rueda?</p>
+<p><br><br></p>
+<h2 id="actividad-6">Actividad 6</h2>
+<p>Busque información y trate de dibujar esquemáticamente un
+diferencial. Escriba en pocos renglones para que sirve.</p>
+<p><br><br></p>
+<div class="grey3 size70">
+<hr />
+<p><strong>Algunas soluciones para autocorregirte</strong></p>
+<h3 id="actividad-2-1">Actividad 2</h3>
+<p><span class="math inline">\text{Relación de Transmisión (i)} =
+\frac{\text{n1}}{\text{n2}} = \frac{2400 rpm}{600rpm}</span> =
+<strong>4</strong></p>
+<h3 id="actividad-3-1">Actividad 3</h3>
+<p>Como <span class="math inline">\text{Relación de Transmisión (i)} =
+\frac{\text{n1}}{\text{n2}}</span></p>
+<p>Queda: <span class="math inline">4 = \frac{2400rpm}{n2}</span></p>
+<p>Despejando x queda: <span class="math inline">n2 =
+\frac{2400rpm}{4}</span> <strong>=600 rpm</strong></p>
+<p>Entonces, a la salida de la caja, el eje gira a 600 RPM, pero con
+mucho más torque, ideal para <strong>trabajar con carga o en el
+campo</strong>.</p>
 <!-- HTML style definitions -->
 <style>
 
@@ -259,5 +289,6 @@ se conecta el motor directamente a las ruedas?</li>
 body {font-size: 1.3em;}
 </style>
 <!-- Use <span> inline and <div> with several lines --->
+</div>
 </body>
 </html>
