--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@ usadasen mecánica</a></p></li>
 motor 4T - parte 1 (Alternacia 4)</a></p></li>
 <li><p><a href="09_transmision.html">9. Transmisión de potencia
 (Alternancia 5)</a></p></li>
+<li><p><a href="10_tractor_1.html">10. El tractor agrícola (Alternancia
+6)</a></p></li>
 </ul>
 <p><span hidden>Fin archivo</span></p>
 <p><br></p>
