--- a/index.html
+++ b/index.html
@@ -63,8 +63,15 @@ usadasen mecánica</a></p></li>
 motor 4T - parte 1 (Alternacia 4)</a></p></li>
 <li><p><a href="09_transmision.html">9. Transmisión de potencia
 (Alternancia 5)</a></p></li>
-<li><p><a href="10_tractor_1.html">10. El tractor agrícola (Alternancia
-6)</a></p></li>
+<li><p><a href="10_tractor_1.html">10. El tractor agrícola - Tipos
+(Alternancia 6)</a></p></li>
+<li><p><a href="11_tractor_2.html">11. El tractor agrícola -
+Lubricación</a></p></li>
+</ul>
+<h2 id="trabajos-prácticos">Trabajos prácticos</h2>
+<ul>
+<li><a href="tp1.html">TP1. Reconocimiento de componentes en
+motores</a></li>
 </ul>
 <p><span hidden>Fin archivo</span></p>
 <p><br></p>
