--- a/index.html
+++ b/index.html
@@ -34,12 +34,20 @@ vertical-align: middle;
 <div class="size80">
 <p><strong>Criterios de aprobación</strong></p>
 <ul>
+<li><strong>Cuatrimestre 1:</strong> Tener <strong>A</strong> en
+Bimestre 1 y 2
+<ul>
 <li><strong>Bimestre 1:</strong> Tener <strong>A</strong> en Guía 3
 (Alt. 1) y Prueba 1</li>
 <li><strong>Bimestre 2:</strong> Tener <strong>A</strong> en Guía 5
 (Alt. 2), Guía 6 (Alt. 3) y Prueba 2.</li>
-<li><strong>Cuatrimestre 1:</strong> Tener <strong>A</strong> en
-Bimestre 1 y 2</li>
+</ul></li>
+<li><strong>Cuatrimestre 2:</strong> Tener <strong>A</strong> en
+Bimestre 3 y 4
+<ul>
+<li><strong>Bimestre 3:</strong> Tener <strong>A</strong> en Guía 9
+(Alt. 5) y Guía 10 (Alt 6)</li>
+</ul></li>
 </ul>
 </div>
 </div>
